# method-red

./: README.md
agent-frameworks/Decepticon/: .dockerignore  .golangci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.opscontrol.yml  docker-compose.watch.yml  langgraph.json  package-lock.json  package.json  pyproject.toml
agent-frameworks/Decepticon/benchmark/: EXPLOITBENCH-GAINS.md  README-exploitbench.md  README.md  __init__.py  __main__.py  reporter.py  scorer.py
agent-frameworks/Decepticon/benchmark/configs/: __init__.py  exploitbench-smoke.yaml  exploitbench-v8-small.yaml
agent-frameworks/Decepticon/benchmark/dreadgoad/: README.md  __init__.py  __main__.py  config.py  harness.py  reporter.py  runner.py  schemas.py  state.py
agent-frameworks/Decepticon/benchmark/dreadgoad/configs/: apt-grid-15runs.yaml  apt-shared-lab-grid.yaml  apt28.yaml  apt29.yaml  apt41.yaml  apt44.yaml  lazarus.yaml
agent-frameworks/Decepticon/benchmark/dreadgoad/lab/: __init__.py  dreadgoad_cli.py
agent-frameworks/Decepticon/benchmark/dreadgoad/providers/: __init__.py  base.py  dreadgoad.py
agent-frameworks/Decepticon/benchmark/providers/: exploitbench.py  exploitbench_capabilities.py  mhbench.py
agent-frameworks/Decepticon/benchmark/results/: README.md
agent-frameworks/Decepticon/benchmark/results/XBEN-010-24/: README.md  report.json  report.md
agent-frameworks/Decepticon/clients/cli/: package.json  tsconfig.json  vitest.config.ts
agent-frameworks/Decepticon/clients/launcher/: .goreleaser.yml  go.mod  go.sum  main.go
agent-frameworks/Decepticon/clients/web/: .build-stamp  LICENSE  eslint.config.mjs  next.config.ts  tsconfig.json
agent-frameworks/Decepticon/config/: auth_handler.py  claude4_compat.yaml  claude_code_handler.py  codex_chatgpt_handler.py  copilot_handler.py  gemini_handler.py  grok_handler.py  http_client.py  litellm.yaml  litellm_startup.py  oauth_token_store.py  ollama_probe.py  perplexity_handler.py
agent-frameworks/Decepticon/containers/: c2-sliver-entrypoint.sh  c2-sliver.Dockerfile  cli.Dockerfile  langgraph.Dockerfile  litellm.Dockerfile  sandbox.Dockerfile  skillogy.Dockerfile  web-entrypoint.sh  web.Dockerfile
agent-frameworks/Decepticon/containers/postgres-init/: 01-create-web-db.sql  02-bloodhound-db.sh
agent-frameworks/Decepticon/docs/: agents.md  architecture.md  contributor-architecture.md  e2e-testing-guide.md  engagement-workflow.md  getting-started.md  library-consumer-guide.md  makefile-reference.md  models.md  plugin-author-guide.md  setup-guide.md  skill-cleanup-process.md  skill-cleanup-progress.md  skills.md  web-dashboard.md
agent-frameworks/Decepticon/docs/adr/: 0001-record-architecture-decisions.md  0002-pr-tiering-and-blast-radius.md  0003-ai-contributor-self-review.md  0004-zero-ai-slop-policy.md  0006-agent-driven-container-lifecycle.md  0007-ai-surface-technology-node.md  0008-skillogy-hard-acl-phase1a.md  0009-hitl-langgraph-native-migration.md  README.md  template.md
agent-frameworks/Decepticon/docs/architecture/: context-engineering.md  red-team-infrastructure.md
agent-frameworks/Decepticon/docs/design/: 2026-06-03-external-docs-research.md  2026-06-03-kg-middleware-implementation-research.md  opplan-middleware.md  single-bash-and-graphdb.md  skillogy-brain-redesign.md  skillogy.md
agent-frameworks/Decepticon/docs/engineering/: ci-arsenal.md
agent-frameworks/Decepticon/docs/features/: blue-cell.md
agent-frameworks/Decepticon/docs/migration/: from-0.0.x.md
agent-frameworks/Decepticon/docs/proposals/: 156-compose-architecture.md
agent-frameworks/Decepticon/docs/red-team/: ai-red-teaming.md  operations.md  opplan-domain-knowledge.md  recon-methodology.md  tools-techniques.md
agent-frameworks/Decepticon/docs/security/: prompt-injection-defense.md  roe-machine-enforcement.md  sandbox-isolation.md
agent-frameworks/Decepticon/scripts/: init-web-db.sql  init_neo4j.cypher  install.ps1  install.sh  next_version.py  render_benchmark_charts.py  web-hotswap.sh
agent-frameworks/Decepticon/tests/: test_compose_langgraph_command.py  test_compose_network_isolation.py
agent-frameworks/RedTeam-MCP/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent-frameworks/RedTeam-MCP/config/: config.yaml
agent-frameworks/RedTeam-MCP/src/: __init__.py  config.py  db.py  main.py  mcp_server_dynamic.py  models.py
agent-frameworks/RedTeam-MCP/src/agents/: __init__.py  configurable_agent.py  coordinator.py  modes.py
agent-frameworks/RedTeam-MCP/src/api/: __init__.py  app.py  cache.py  crud.py  endpoints.py  models.py  websockets.py
agent-frameworks/RedTeam-MCP/src/cli/: __init__.py  benchmark.py  chat.py  generate_mcp.py  history.py  multi_agent.py  team.py  utils.py
agent-frameworks/RedTeam-MCP/src/providers/: __init__.py  base.py  custom.py  plugin_registry.py  plugin_system.py  registry.py
agent-frameworks/RedTeam-MCP/src/web/: __init__.py  routes.py
agent-frameworks/RedTeam-MCP/tests/: test_agent.py  test_api.py  test_config.py  test_main.py  test_mcp_server.py  test_models.py  test_multi_agent.py  test_plugin_system.py  test_providers.py
agent-frameworks/RedteamAgent/orchestrator/backend/: README.md  pyproject.toml
agent-frameworks/red-run/tools/browser-server/: README.md  pyproject.toml  server.py
agent-frameworks/red-run/tools/nmap-server/: Dockerfile  README.md  pyproject.toml  server.py  validate.py
agent-frameworks/red-run/tools/rdp-server/: README.md  pyproject.toml  server.py
agent-frameworks/red-run/tools/shell-server/: Dockerfile  README.md  pyproject.toml  server.py  start.sh
agent-frameworks/red-run/tools/skill-router/: README.md  convert_frontmatter.py  indexer.py  pyproject.toml  server.py  update_routing_refs.py
agent-frameworks/red-run/tools/sliver-server/: README.md  pyproject.toml  server.py  start.sh
agent-frameworks/red-run/tools/state-server/: README.md  pyproject.toml  schema.py  server.py
(+1718 files in other folders)
