[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redteam-orchestrator-backend"
version = "0.1.0"
description = "Multi-user web control plane for Redteam Agent projects"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
# Tests live at repo-root tests/orchestrator/backend/ (per project policy:
# all tests under root tests/, never colocated with product source). Running
# `pytest` from this dir auto-discovers them without needing a path arg.
testpaths = ["../../tests/orchestrator/backend"]
pythonpath = ["."]
