[project]
name = "red-run-nmap-server"
version = "0.1.0"
description = "MCP server running nmap in Docker for Claude Code subagents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "python-libnmap>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
