[project]
name = "red-run-rdp-server"
version = "0.1.0"
description = "MCP server providing headless RDP automation for Claude Code subagents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "aardwolf==0.2.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
