[project]
name = "red-run-shell-server"
version = "0.1.0"
description = "MCP server managing TCP listeners and reverse shell sessions for Claude Code subagents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
