[project]
name = "red-run-state-server"
version = "0.1.0"
description = "MCP server for SQLite-backed engagement state management in red-run"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
